src/main/java/com/sqlanalyzer/parser/spark/SparkSQLParser.java
// Generated from /Users/yangxin/project/java-project/sql-analyzer/src/main/java/com/sqlanalyzer/parser/spark/SparkSQL.g4 by ANTLR 4.13.2

package com.sqlanalyzer.parser.spark;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class SparkSQLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		CREATE=1, TABLE=2, IF=3, NOT=4, EXISTS=5, USING=6, OPTIONS=7, PARTITIONED=8, 
		BY=9, CLUSTERED=10, SORTED=11, INTO=12, BUCKETS=13, TBLPROPERTIES=14, 
		SELECT=15, FROM=16, WHERE=17, GROUP=18, HAVING=19, ORDER=20, LIMIT=21, 
		JOIN=22, INNER=23, LEFT=24, RIGHT=25, FULL=26, OUTER=27, CROSS=28, ON=29, 
		AND=30, OR=31, IN=32, LIKE=33, ASC=34, DESC=35, COMMENT=36, AS=37, STRING=38, 
		INT=39, BIGINT=40, DOUBLE=41, DATE=42, TIMESTAMP=43, BOOLEAN=44, DECIMAL=45, 
		VARCHAR=46, ARRAY=47, MAP=48, STRUCT=49, PARQUET=50, ORC=51, JSON=52, 
		CSV=53, DELTA=54, ICEBERG=55, TRUE=56, FALSE=57, NULL=58, EQUAL=59, NOT_EQUAL=60, 
		LESS_THAN=61, LESS_THAN_EQUAL=62, GREATER_THAN=63, GREATER_THAN_EQUAL=64, 
		DOT=65, COMMA=66, SEMICOLON=67, LPAREN=68, RPAREN=69, STAR=70, LT=71, 
		GT=72, COLON=73, IDENTIFIER=74, BACK_QUOTED_IDENTIFIER=75, STRING_LITERAL=76, 
		DATE_LITERAL=77, NUMBER=78, WS=79, LINE_COMMENT=80, MULTILINE_COMMENT=81;
	public static final int
		RULE_prog = 0, RULE_sqlStatements = 1, RULE_sqlStatement = 2, RULE_createTableStatement = 3, 
		RULE_columnDefinition = 4, RULE_partitionColumns = 5, RULE_transformExpr = 6, 
		RULE_sortItem = 7, RULE_tableOptions = 8, RULE_tableOption = 9, RULE_tableProperties = 10, 
		RULE_property = 11, RULE_selectStatement = 12, RULE_selectElements = 13, 
		RULE_selectElement = 14, RULE_fromClause = 15, RULE_whereClause = 16, 
		RULE_groupByClause = 17, RULE_havingClause = 18, RULE_orderByClause = 19, 
		RULE_limitClause = 20, RULE_orderByExpression = 21, RULE_joinPart = 22, 
		RULE_tableSource = 23, RULE_expression = 24, RULE_primary = 25, RULE_function = 26, 
		RULE_functionArg = 27, RULE_dataType = 28, RULE_structType = 29, RULE_structField = 30, 
		RULE_fileFormat = 31, RULE_comparisonOperator = 32, RULE_identifier = 33, 
		RULE_tableName = 34, RULE_alias = 35, RULE_literal = 36, RULE_star = 37, 
		RULE_groupByItem = 38;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "sqlStatements", "sqlStatement", "createTableStatement", "columnDefinition", 
			"partitionColumns", "transformExpr", "sortItem", "tableOptions", "tableOption", 
			"tableProperties", "property", "selectStatement", "selectElements", "selectElement", 
			"fromClause", "whereClause", "groupByClause", "havingClause", "orderByClause", 
			"limitClause", "orderByExpression", "joinPart", "tableSource", "expression", 
			"primary", "function", "functionArg", "dataType", "structType", "structField", 
			"fileFormat", "comparisonOperator", "identifier", "tableName", "alias", 
			"literal", "star", "groupByItem"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'CREATE'", "'TABLE'", "'IF'", "'NOT'", "'EXISTS'", "'USING'", 
			"'OPTIONS'", "'PARTITIONED'", "'BY'", "'CLUSTERED'", "'SORTED'", "'INTO'", 
			"'BUCKETS'", "'TBLPROPERTIES'", "'SELECT'", "'FROM'", "'WHERE'", "'GROUP'", 
			"'HAVING'", "'ORDER'", "'LIMIT'", "'JOIN'", "'INNER'", "'LEFT'", "'RIGHT'", 
			"'FULL'", "'OUTER'", "'CROSS'", "'ON'", "'AND'", "'OR'", "'IN'", "'LIKE'", 
			"'ASC'", "'DESC'", "'COMMENT'", "'AS'", "'STRING'", "'INT'", "'BIGINT'", 
			"'DOUBLE'", "'DATE'", "'TIMESTAMP'", "'BOOLEAN'", "'DECIMAL'", "'VARCHAR'", 
			"'ARRAY'", "'MAP'", "'STRUCT'", "'PARQUET'", "'ORC'", "'JSON'", "'CSV'", 
			"'DELTA'", "'ICEBERG'", "'TRUE'", "'FALSE'", "'NULL'", "'='", null, null, 
			"'<='", null, "'>='", "'.'", "','", "';'", "'('", "')'", "'*'", null, 
			null, "':'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "CREATE", "TABLE", "IF", "NOT", "EXISTS", "USING", "OPTIONS", "PARTITIONED", 
			"BY", "CLUSTERED", "SORTED", "INTO", "BUCKETS", "TBLPROPERTIES", "SELECT", 
			"FROM", "WHERE", "GROUP", "HAVING", "ORDER", "LIMIT", "JOIN", "INNER", 
			"LEFT", "RIGHT", "FULL", "OUTER", "CROSS", "ON", "AND", "OR", "IN", "LIKE", 
			"ASC", "DESC", "COMMENT", "AS", "STRING", "INT", "BIGINT", "DOUBLE", 
			"DATE", "TIMESTAMP", "BOOLEAN", "DECIMAL", "VARCHAR", "ARRAY", "MAP", 
			"STRUCT", "PARQUET", "ORC", "JSON", "CSV", "DELTA", "ICEBERG", "TRUE", 
			"FALSE", "NULL", "EQUAL", "NOT_EQUAL", "LESS_THAN", "LESS_THAN_EQUAL", 
			"GREATER_THAN", "GREATER_THAN_EQUAL", "DOT", "COMMA", "SEMICOLON", "LPAREN", 
			"RPAREN", "STAR", "LT", "GT", "COLON", "IDENTIFIER", "BACK_QUOTED_IDENTIFIER", 
			"STRING_LITERAL", "DATE_LITERAL", "NUMBER", "WS", "LINE_COMMENT", "MULTILINE_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SparkSQL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SparkSQLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgContext extends ParserRuleContext {
		public SqlStatementsContext sqlStatements() {
			return getRuleContext(SqlStatementsContext.class,0);
		}
		public TerminalNode EOF() { return getToken(SparkSQLParser.EOF, 0); }
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SparkSQLListener ) ((SparkSQLListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SparkSQLListener ) ((SparkSQLListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SparkSQLVisitor ) return ((SparkSQLVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			sqlStatements();
			setState(79);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SqlStatementsContext extends ParserRuleContext {
		public List<SqlStatementContext> sqlStatement() {
			return getRuleContexts(SqlStatementContext.class);
		}
		public SqlStatementContext sqlStatement(int i) {
			return getRuleContext(SqlStatementContext.class,i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(SparkSQLParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(SparkSQLParser.SEMICOLON, i);
		}
		public SqlStatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sqlStatements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SparkSQLListener ) ((SparkSQLListener)listener).enterSqlStatements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SparkSQLListener ) ((SparkSQLListener)listener).exitSqlStatements(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SparkSQLVisitor ) return ((SparkSQLVisitor<? extends T>)visitor).visitSqlStatements(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SqlStatementsContext sqlStatements() throws RecognitionException {
		SqlStatementsContext _localctx = new SqlStatementsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sqlStatements);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			sqlStatement();
			setState(86);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(82);
					match(SEMICOLON);
					setState(83);
					sqlStatement();
					}
					} 
				}
				setState(88);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(90);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SEMICOLON) {
				{
				setState(89);
				match(SEMICOLON);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SqlStatementContext extends ParserRuleContext {
		public CreateTableStatementContext createTableStatement() {
			return getRuleContext(CreateTableStatementContext.class,0);
		}
		public SelectStatementContext selectStatement() {
			return getRuleContext(SelectStatementContext.class,0);
		}
		public SqlStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sqlStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SparkSQLListener ) ((SparkSQLListener)listener).enterSqlStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SparkSQLListener ) ((SparkSQLListener)listener).exitSqlStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SparkSQLVisitor ) return ((SparkSQLVisitor<? extends T>)visitor).visitSqlStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SqlStatementContext sqlStatement() throws RecognitionException {
		SqlStatementContext _localctx = new SqlStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_sqlStatement);
		try {
			setState(94);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CREATE:
				enterOuterAlt(_localctx, 1);
				{
				setState(92);
				createTableStatement();
				}
				break;
			case SELECT:
				enterOuterAlt(_localctx, 2);
				{
				setState(93);
				selectStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CreateTableStatementContext extends ParserRuleContext {
		public TerminalNode CREATE() { return getToken(SparkSQLParser.CREATE, 0); }
		public TerminalNode TABLE() { return getToken(SparkSQLParser.TABLE, 0); }
		public TableNameContext tableName() {
			return getRuleContext(TableNameContext.class,0);
		}
		public TerminalNode IF() { return getToken(SparkSQLParser.IF, 0); }
		public TerminalNode NOT() { return getToken(SparkSQLParser.NOT, 0); }
		public TerminalNode EXISTS() { return getToken(SparkSQLParser.EXISTS, 0); }
		public List<TerminalNode> LPAREN() { return getTokens(SparkSQLParser.LPAREN); }
		public TerminalNode LPAREN(int i) {
			return getToken(SparkSQLParser.LPAREN, i);
		}
		public List<ColumnDefinitionContext> columnDefinition() {
			return getRuleContexts(ColumnDefinitionContext.class);
		}
		public ColumnDefinitionContext columnDefinition(int i) {
			return getRuleContext(ColumnDefinitionContext.class,i);
		}
		public List<TerminalNode> RPAREN() { return getTokens(SparkSQLParser.RPAREN); }
		public TerminalNode RPAREN(int i) {
			return getToken(SparkSQLParser.RPAREN, i);
		}
		public TerminalNode USING() { return getToken(SparkSQLParser.USING, 0); }
		public FileFormatContext fileFormat() {
			return getRuleContext(FileFormatContext.class,0);
		}
		public TerminalNode OPTIONS() { return getToken(SparkSQLParser.OPTIONS, 0); }
		public TableOptionsContext tableOptions() {
			return getRuleContext(TableOptionsContext.class,0);
		}
		public TerminalNode PARTITIONED() { return getToken(SparkSQLParser.PARTITIONED, 0); }
		public List<TerminalNode> BY() { return getTokens(SparkSQLParser.BY); }
		public TerminalNode BY(int i) {
			return getToken(SparkSQLParser.BY, i);
		}
		public PartitionColumnsContext partitionColumns() {
			return getRuleContext(PartitionColumnsContext.class,0);
		}
		public TerminalNode CLUSTERED() { return getToken(SparkSQLParser.CLUSTERED, 0); }
		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}
		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class,i);
		}
		public TerminalNode INTO() { return getToken(SparkSQLParser.INTO, 0); }
		public TerminalNode NUMBER() { return getToken(SparkSQLParser.NUMBER, 0); }
		public TerminalNode BUCKETS() { return getToken(SparkSQLParser.BUCKETS, 0); }
		public TablePropertiesContext tableProperties() {
			return getRuleContext(TablePropertiesContext.class,0);
		}
		public List<TerminalNode> COMMA() { return getTokens(SparkSQLParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(SparkSQLParser.COMMA, i);
		}
		public TerminalNode SORTED() { return getToken(SparkSQLParser.SORTED, 0); }
		public List<SortItemContext> sortItem() {
			return getRuleContexts(SortItemContext.class);
		}
		public SortItemContext sortItem(int i) {
			return getRuleContext(SortItemContext.class,i);
		}
		public CreateTableStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_createTableStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SparkSQLListener ) ((SparkSQLListener)listener).enterCreateTableStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SparkSQLListener ) ((SparkSQLListener)listener).exitCreateTableStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SparkSQLVisitor ) return ((SparkSQLVisitor<? extends T>)visitor).visitCreateTableStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CreateTableStatementContext createTableStatement() throws RecognitionException {
		CreateTableStatementContext _localctx = new CreateTableStatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_createTableStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			match(CREATE);
			setState(97);
			match(TABLE);
			setState(101);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IF) {
				{
				setState(98);
				match(IF);
				setState(99);
				match(NOT);
				setState(100);
				match(EXISTS);
				}
			}

			setState(103);
			tableName();
			setState(115);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LPAREN) {
				{
				setState(104);
				match(LPAREN);
				setState(105);
				columnDefinition();
				setState(110);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(106);
					match(COMMA);
					setState(107);
					columnDefinition();
					}
					}
					setState(112);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(113);
				match(RPAREN);
				}
			}

			setState(119);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==USING) {
				{
				setState(117);
				match(USING);
				setState(118);
				fileFormat();
				}
			}

			setState(126);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==OPTIONS) {
				{
				setState(121);
				match(OPTIONS);
				setState(122);
				match(LPAREN);
				setState(123);
				tableOptions();
				setState(124);
				match(RPAREN);
				}
			}

			setState(131);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PARTITIONED) {
				{
				setState(128);
				match(PARTITIONED);
				setState(129);
				match(BY);
				setState(130);
				partitionColumns();
				}
			}

			setState(164);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==CLUSTERED) {
				{
				setState(133);
				match(CLUSTERED);
				setState(134);
				match(BY);
				setState(135);
				match(LPAREN);
				setState(136);
				identifier();
				setState(141);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(137);
					match(COMMA);
					setState(138);
					identifier();
					}
					}
					setState(143);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(144);
				match(RPAREN);
				setState(158);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SORTED) {
					{
					setState(145);
					match(SORTED);
					setState(146);
					match(BY);
					setState(147);
					match(LPAREN);
					setState(148);
					sortItem();
					setState(153);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==COMMA) {
						{
						{
						setState(149);
						match(COMMA);
						setState(150);
						sortItem();
						}
						}
						setState(155);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(156);
					match(RPAREN);
					}
				}

				setState(160);
				match(INTO);
				setState(161);
				match(NUMBER);
				setState(162);
				match(BUCKETS);
				}
			}

			setState(167);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TBLPROPERTIES) {
				{
				setState(166);
				tableProperties();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ColumnDefinitionContext extends ParserRuleContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public DataTypeContext dataType() {
			return getRuleContext(DataTypeContext.class,0);
		}
		public TerminalNode COMMENT() { return getToken(SparkSQLParser.COMMENT, 0); }
		public TerminalNode STRING_LITERAL() { return getToken(SparkSQLParser.STRING_LITERAL, 0); }
		public ColumnDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_columnDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SparkSQLListener ) ((SparkSQLListener)listener).enterColumnDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SparkSQLListener ) ((SparkSQLListener)listener).exitColumnDefinition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SparkSQLVisitor ) return ((SparkSQLVisitor<? extends T>)visitor).visitColumnDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ColumnDefinitionContext columnDefinition() throws RecognitionException {
		ColumnDefinitionContext _localctx = new ColumnDefinitionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_columnDefinition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(169);
			identifier();
			setState(170);
			dataType();
			setState(173);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COMMENT) {
				{
				setState(171);
				match(COMMENT);
				setState(172);
				match(STRING_LITERAL);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PartitionColumnsContext extends ParserRuleContext {
		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}
		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(SparkSQLParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(SparkSQLParser.COMMA, i);
		}
		public List<TransformExprContext> transformExpr() {
			return getRuleContexts(TransformExprContext.class);
		}
		public TransformExprContext transformExpr(int i) {
			return getRuleContext(TransformExprContext.class,i);
		}
		public PartitionColumnsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_partitionColumns; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SparkSQLListener ) ((SparkSQLListener)listener).enterPartitionColumns(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SparkSQLListener ) ((SparkSQLListener)listener).exitPartitionColumns(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SparkSQLVisitor ) return ((SparkSQLVisitor<? extends T>)visitor).visitPartitionColumns(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PartitionColumnsContext partitionColumns() throws RecognitionException {
		PartitionColumnsContext _localctx = new PartitionColumnsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_partitionColumns);
		int _la;
		try {
			setState(191);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,17,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(175);
				identifier();
				setState(180);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(176);
					match(COMMA);
					setState(177);
					identifier();
					}
					}
					setState(182);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(183);
				transformExpr();
				setState(188);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(184);
					match(COMMA);
					setState(185);
					transformExpr();
					}
					}
					setState(190);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
